[metadata]
name = crawlerclient
summary = CLI for Simple Social Netwrok Crawler
description-file = README.md
author = Dmitry Ukov
author-email = kemokd@gmail.com
home-page = http://example.com
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    crawlerclient

[entry_points]
console_scripts:
    crawler = crawlerclient.main:main
sc.cmds:
    status = crawlerclient.status:Status
    agent_list = crawlerclient.agent:List
